<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ui_bg_tv_blue"
    android:padding="@dimen/ui_space_screen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_history_title"
                style="@style/TsmTextPageTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/history_title" />

            <Button
                android:id="@+id/btn_history_back"
                style="@style/TsmButtonPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_back"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ui_space_4xl"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_history_search"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/bg_modal_input"
                android:hint="@string/history_search_hint"
                android:imeOptions="actionSearch"
                android:inputType="text"
                android:maxLines="1"
                android:padding="@dimen/ui_space_lg"
                android:singleLine="true"
                android:textColor="@color/ui_text_primary"
                android:textColorHint="@color/ui_text_muted"
                android:textSize="@dimen/ui_text_body_large" />

            <Button
                android:id="@+id/btn_history_search"
                style="@style/TsmButtonPrimary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ui_space_lg"
                android:text="@string/history_search"
                android:textAllCaps="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ui_space_lg"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_history_page"
                style="@style/TsmTextSecondary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btn_history_prev"
                style="@style/TsmButtonDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/history_prev_page"
                android:textAllCaps="false" />

            <Button
                android:id="@+id/btn_history_next"
                style="@style/TsmButtonDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/ui_space_lg"
                android:text="@string/history_next_page"
                android:textAllCaps="false" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_history_status"
            style="@style/TsmTextSecondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ui_space_lg"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/scroll_history"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/ui_space_lg"
            android:layout_weight="1"
            android:fillViewport="false">

            <LinearLayout
                android:id="@+id/container_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>
    </LinearLayout>
</FrameLayout>
